--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ pytz==2021.3
 PyYAML==5.4.1
 querystring-parser==1.2.4
 requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
 six==1.16.0
 smmap==4.0.0
 SQLAlchemy==1.4.25
