--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ python-editor==1.0.4
 pytz==2021.3
 PyYAML==6.0
 querystring-parser==1.2.4
+requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.1
 six==1.16.0
